<?xml version="1.0"?>
<package format="2">
  <name>omni_base_2dnav_gazebo</name>
  <version>0.0.4</version>
  <description>The omni_base_2dnav_gazebo package</description>

  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>

  <license>Modified BSD</license>
  <author email="antonio.brandi@pal-robotics.com">Antonio Brandi</author>


  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>omni_base_gazebo</exec_depend>
  <exec_depend>omni_base_2dnav</exec_depend>

</package>
