<?xml version="1.0"?>
<package format="2">
  <name>omni_base_gazebo</name>
  <version>0.0.4</version>
  <description>The omni_base_gazebo package</description>

  <maintainer email="antonio.brandi@pal-robotics.com">Antonio Brandi</maintainer>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <exec_depend>pal_hardware_gazebo</exec_depend>
  <exec_depend>omni_base_bringup</exec_depend>
  <exec_depend>omni_base_controller_configuration_gazebo</exec_depend>
  <exec_depend>omni_base_description</exec_depend>
  <exec_depend>omni_base_laser_sensors</exec_depend>

</package>
