<?xml version="1.0"?>
<package format="3">
  <name>omni_base_gazebo</name>
  <version>0.0.7</version>
  <description>The omni_base_gazebo package</description>
  <author email="yue.erro@pal-robotics.com">Yue Erro</author>
  <maintainer email="yue.erro@pal-robotics.com">Yue Erro</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>launch_pal</exec_depend>
  <exec_depend>pal_gazebo_plugins</exec_depend>
  <exec_depend>pal_gazebo_worlds</exec_depend>
  <!--<exec_depend>omni_base_2dnav</exec_depend>  -->
  <exec_depend>omni_base_bringup</exec_depend>
  <!--<exec_depend>omni_base_controller_configuration</exec_depend>-->
  <exec_depend>omni_base_description</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
